syntax = "proto3";

package adminserver.api.v1;

option go_package = "server/admin-server/api/v1;v1";



import "google/api/annotations.proto";
import "validate/validate.proto";

service DatasetService {
  // 新增数据集类型
  rpc AddDatasetType (AddDatasetTypeRequest) returns (AddDatasetTypeReply) {
    option (google.api.http) = {
      post: "/v1/datasetmanage/datasettype"
      body: "*"
    };
  }
  // 查询数据集类型列表
  rpc ListDatasetType (ListDatasetTypeRequest) returns (ListDatasetTypeReply) {
    option (google.api.http) = {
      get: "/v1/datasetmanage/datasettype"
    }; 
  }
  // 删除数据集类型
  rpc DeleteDatasetType (DeleteDatasetTypeRequest) returns (DeleteDatasetTypeReply) {
    option (google.api.http) = {
      delete: "/v1/datasetmanage/datasettype/{id}"
    };
  }

  // 修改数据集类型
  rpc UpdateDatasetType (UpdateDatasetTypeRequest) returns (UpdateDatasetTypeReply) {
    option (google.api.http) = {
      put: "/v1/datasetmanage/datasettype/{id}"
    };
  }

  // 查询预置数据集列表
  rpc ListPreDataset (ListPreDatasetRequest) returns (ListPreDatasetReply) {
    option (google.api.http) = {
      get: "/v1/datasetmanage/predataset"
    };
  }
  // 查询用户数据集列表
  rpc ListUserDataset (ListUserDatasetRequest) returns (ListUserDatasetReply) {
    option (google.api.http) = {
      get: "/v1/datasetmanage/userdataset"
    };
  }
  // 查询版本列表
  rpc ListDatasetVersion (ListDatasetVersionRequest) returns (ListDatasetVersionReply) {
    option (google.api.http) = {
      get: "/v1/datasetmanage/dataset/{datasetId}/version"
    };
  };
  // 创建数据集
  rpc CreateDataset (CreateDatasetRequest) returns (CreateDatasetReply) {
    option (google.api.http) = {
      post: "/v1/datasetmanage/dataset"
      body: "*"
    };
  };
  // 创建版本
  rpc CreateDatasetVersion (CreateDatasetVersionRequest) returns (CreateDatasetVersionReply) {
    option (google.api.http) = {
      post: "/v1/datasetmanage/dataset/{datasetId}/version"
      body: "*"
    };
  };
  // 删除数据集
  rpc DeleteDataset (DeleteDatasetRequest) returns (DeleteDatasetReply) {
    option (google.api.http) = {
      delete: "/v1/datasetmanage/dataset/{id}"
    };
  }
  // 删除版本
  rpc DeleteDatasetVersion (DeleteDatasetVersionRequest) returns (DeleteDatasetVersionReply) {
    option (google.api.http) = {
      delete: "/v1/datasetmanage/dataset/{datasetId}/version/{version}"
    };
  }
  // 确认上传成功
  rpc ConfirmUploadDatasetVersion (ConfirmUploadDatasetVersionRequest) returns (ConfirmUploadDatasetVersionReply) {
    option (google.api.http) = {
      put: "/v1/datasetmanage/dataset/{datasetId}/version/{version}/uploadconfirm"
      body: "*"
    };
  };
  // 获取上传地址
  rpc UploadDatasetVersion (UploadDatasetVersionRequest) returns (UploadDatasetVersionReply) {
    option (google.api.http) = {
      post: "/v1/datasetmanage/dataset/{datasetId}/version/{version}/upload"
      body: "*"
    };
  }
  // 预览版本
  rpc ListDatasetVersionFile (ListDatasetVersionFileRequest) returns (ListDatasetVersionFileReply) {
    option (google.api.http) = {
      get: "/v1/datasetmanage/dataset/{datasetId}/version/{version}/file"
    };
  }
}

message DatasetType {
  string id = 1;
  string typeDesc = 2;
}

message AddDatasetTypeRequest {
  string typeDesc = 1[(validate.rules).string = {min_len: 1, max_len: 128}];
}

message AddDatasetTypeReply {
  DatasetType datasetType = 1;
}

message ListDatasetTypeRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lt:100}];
}

message ListDatasetTypeReply {
  int64 totalSize = 1;
  repeated DatasetType datasetTypes = 2;
}

message DeleteDatasetTypeRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
}

message DeleteDatasetTypeReply {
  int64 deletedAt = 1;
}

message UpdateDatasetTypeRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
  string typeDesc = 2[(validate.rules).string = {min_len: 1, max_len: 128}];
}

message UpdateDatasetTypeReply {
  int64 updatedAt = 1;
}

message CreateDatasetRequest {
  string name = 1[(validate.rules).string = {min_len: 1, max_len: 30}];
  string typeId = 2[(validate.rules).string = {min_len: 1 max_len: 64}];
  string desc = 3[(validate.rules).string = {max_len: 300}];
}

message CreateDatasetReply {
  string id = 1;
  string version = 2;
}

message Dataset {
  int64 createdAt = 1;
  int64 updatedAt = 2;
  string id = 3;
  string spaceId = 4;
  string userId = 5;
  int32 sourceType = 6;
  string name = 7;
  string typeId = 8;
  string typeDesc = 9;
  string desc = 10;
  string latestVersion = 11;
  string spaceName = 12;
  string userName = 13;
}

message ListPreDatasetRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lt:100}];
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  int64 createdAtGte = 5;
  int64 createdAtLt = 6;
  string searchKey = 7;
}

message ListPreDatasetReply {
  int64 totalSize = 1;
  repeated Dataset datasets = 2;
}

message ListUserDatasetRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lt:100}];
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  int64 createdAtGte = 5;
  int64 createdAtLt = 6;
  string searchKey = 7;
  string userId = 8;
  string spaceId = 9;
}

message ListUserDatasetReply {
  int64 totalSize = 1;
  repeated Dataset datasets = 2;
}

message DeleteDatasetRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
}

message DeleteDatasetReply {
  int64 deletedAt = 1;
}

message CreateDatasetVersionRequest {
  string datasetId = 1[(validate.rules).string = {min_len: 1}];
  string desc = 2[(validate.rules).string = {max_len: 300}];
}

message CreateDatasetVersionReply {
  string datasetId = 1;
  string version = 2;
}

message DatasetVersion {
  int64 createdAt = 1;
  int64 updatedAt = 2;
  string datasetId = 3;
  string version = 4;
  string desc = 5;
  string path = 6;
  int32 status = 7;
}

message ListDatasetVersionRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lt:100}];
  string datasetId = 3[(validate.rules).string = {min_len: 1}];
  string status = 5;
}

message ListDatasetVersionReply {
  int64 totalSize = 1;
  repeated DatasetVersion versions = 2;
}

message DeleteDatasetVersionRequest {
  string datasetId = 1[(validate.rules).string = {min_len: 1}];
  string version = 2[(validate.rules).string = {min_len: 1}];
}

message DeleteDatasetVersionReply {
  int64 deletedAt = 1;
}

message ConfirmUploadDatasetVersionRequest {
  string datasetId = 1[(validate.rules).string = {min_len: 1}];
  string version = 2[(validate.rules).string = {min_len: 1}];
  string fileName = 3[(validate.rules).string = {min_len:3,pattern:".*\\.zip+$"}];
}

message ConfirmUploadDatasetVersionReply {
  int64 updatedAt = 1;
}

message UploadDatasetVersionRequest {
  string datasetId = 1[(validate.rules).string = {min_len: 1}];
  string version = 2[(validate.rules).string = {min_len: 1}];
  string fileName = 3[(validate.rules).string = {min_len:3,pattern:".*\\.zip+$"}];
  string domain = 4[(validate.rules).string = {min_len: 1,pattern:"(https?)://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|]"}];
}

message UploadDatasetVersionReply {
  string uploadUrl = 1;
}

message ListDatasetVersionFileRequest {
  string datasetId = 1[(validate.rules).string = {min_len: 1}];
  string version = 2[(validate.rules).string = {min_len: 1}];
  string path = 3;
}

message ListDatasetVersionFileReply {
  message File {
    string name = 1;
    string type = 2;
    string path = 3;
  }
  repeated File files = 1;
}
